--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<title>Clinton Braganza-Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+	<link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
 	<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/noscript.css" />
