--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Clinton Braganza-Portfolio</title>
+	<title>Clinton Braganza</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
@@ -10,14 +10,6 @@
 	<noscript>
 		<link rel="stylesheet" href="%PUBLIC_URL%/assets/css/noscript.css" />
 	</noscript>
-	<script src="%PUBLIC_URL%/assets/js/jquery.min.js"></script>
-	<script src="%PUBLIC_URL%/assets/js/jquery.scrollex.min.js"></script>
-	<script src="%PUBLIC_URL%/assets/js/jquery.scrolly.min.js"></script>
-	<script src="%PUBLIC_URL%/assets/js/browser.min.js"></script>
-	<script src="%PUBLIC_URL%/assets/js/breakpoints.min.js"></script>
-	<script src="%PUBLIC_URL%/assets/js/util.js"></script>
-	<script src="%PUBLIC_URL%/assets/js/main.js"></script>
-
 	<!-- Bootstrap Latest compiled and minified CSS -->
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -44,6 +36,7 @@
 								<li><a href="#description">Who Am I?</a></li>
 								<li><a href="#experience">Experience</a></li>
 								<li><a href="#skills">Skill Set</a></li>
+								<li><a href="#gallery">Gallery</a></li>
 								<li><a href="#courses">Courses</a></li>
 								<li><a href="#projects">Projects</a></li>
 							</ul>
